RESOLVED FIXED123440
ExtJS breaks with modern Array.prototype.values API due to use of with()
https://bugs.webkit.org/show_bug.cgi?id=123440
Summary ExtJS breaks with modern Array.prototype.values API due to use of with()
Carlos Garcia Campos
Reported 2013-10-29 04:57:38 PDT
See these examples: http://dev.sencha.com/deploy/ext-3.4.0/examples/form/combos.html I'm assuming it's a JSC bug because it's reproducible in different ports and it's js code, but I'm still bisecting to find the commit that introduced the regression.
Attachments
Patch (9.25 KB, patch)
2013-11-11 12:45 PST, Oliver Hunt
bdakin: review+
Carlos Garcia Campos
Comment 1 2013-10-31 06:31:18 PDT
Finally found the commit that introduced the regression, according to git bisect, r156791 is the commit to blame.
Radar WebKit Bug Importer
Comment 2 2013-10-31 11:14:45 PDT
Oliver Hunt
Comment 3 2013-10-31 13:21:26 PDT
If it is 156791 it implies that Ext is assuming Array.values, .entries, or .keys is something special with no basis for that decision.
Sergio Villar Senin
Comment 4 2013-11-11 10:24:25 PST
(In reply to comment #3) > If it is 156791 it implies that Ext is assuming Array.values, .entries, or .keys is something special with no basis for that decision. In any case shouldn't we do something about it while they don't fix it?
Oliver Hunt
Comment 5 2013-11-11 11:59:51 PST
ExtJS holds back the web _again_. Emailed ES list, we're going to have to remove Array.prototype.values. Congratulations!
Oliver Hunt
Comment 6 2013-11-11 12:45:57 PST
Oliver Hunt
Comment 7 2013-11-11 12:51:07 PST
Note You need to log in before you can comment on or make changes to this bug.