ExtJS breaks with modern Array.prototype.values API due to use of with() https://bugs.webkit.org/show_bug.cgi?id=123440

Reviewed by Beth Dakin.

Source/JavaScriptCore:

As with our attempt to make Arguments use the Array prototype, ExtJS has
a weird dependency on not adding new APIs to core types.  In this case
Array.prototype.values.  The fix is to remove it, and push for ES6 to drop
the API.

* runtime/ArrayPrototype.cpp:

LayoutTests:

Update tests for removal of Array.prototype.values, and add test to ensure that
it's gone.

* js/Object-getOwnPropertyNames-expected.txt:
* js/array-iterators-expected.txt:
* js/basic-for-of-expected.txt:
* js/script-tests/Object-getOwnPropertyNames.js:
* js/script-tests/array-iterators.js:
* js/script-tests/basic-for-of.js:

Canonical link: https://commits.webkit.org/142353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159063 268f45cc-cd09-0410-ab3c-d52691b4dbfc